--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 LLaMA-Factory/data/tool_sft.json filter=lfs diff=lfs merge=lfs -text
 verl/verl/data/test.parquet filter=lfs diff=lfs merge=lfs -text
 verl/verl/data/train.parquet filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
